deployfolder/objects/Credit_Card__c.object
<CustomObject>
    <label>Credit Card</label>
    <nameField>
        <label>Credit Card Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Cards</relationshipLabel>
        <relationshipName>Credit_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cardholder_Name__c</fullName>
        <label>Cardholder Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Rank__c</fullName>
        <label>CC Rank</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCardKey__c</fullName>
        <externalId>true</externalId>
        <label>CreditCardKey</label>
        <length>28</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Salesforce_Notes__c</fullName>
        <label>Salesforce Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>